feat: create basic functional for users list: viewer, edit, delete, create

--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "ra-data-json-server": "^4.4.3",
     "react": "^18.2.0",
-    "react-admin": "^4.4.3",
     "react-dom": "^18.2.0",
+    "react-normalize": "^0.4.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -36,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ra-data-json-server": "^4.4.4",
+    "react-admin": "^4.4.4"
   }
 }
